--- a/Maquette 2/index.html
+++ b/Maquette 2/index.html
@@ -6,7 +6,6 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="img-icone" type="image/png" href="/src_assets_img_icon-open.svg"/>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
@@ -20,30 +19,36 @@
             integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
             crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/d3607bbb57.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+    <link rel="stylesheet" href=
+            "https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
 
     <title>Title</title>
 
 </head>
 <body>
-<div class="container">
+<div class="container-fluid">
     <div class="row">
         <div class="col-sm-2 background">
             <div class="row">
                 <div class="col-sm-12 text-center background-1">
                     <div class="text">
-                        <h2 class="font-weight-bolder">1 0 0 1</h2>
-                        <p class="font-weight-lighter">M A L L E S</p>
+                        <h4 class="font-weight-bolder">1 0 0 1</h4>
+                        <h4 class="text-monospace font-weight-light">M A L L E S</h4>
                     </div>
                 </div>
             </div>
             <div class="dropdown-divider trait"></div>
             <div class="row">
                 <div class="col-sm-12 background">
-                    <div class="text1">
+                    <div class="text">
                         <h6><i class="fas fa-home"></i> Accueil </h6>
                     </div>
-                    <div class="text2">
 
+                    <div class="text2">
                         <h6><i class="fas fa-suitcase"></i> collections </h6>
                         <h6><i class="fas fa-user"></i> Propriétaires </h6>
                         <h6><i class="fas fa-globe"></i> Emplacements </h6>
@@ -54,114 +59,138 @@
 
                         <h6><i class="fas fa-scroll"></i>Ticket
                             <span class="badge badge-danger float-right m-1">9</span></h6>
-                        <h6><i class="fas fa-bell"></i>Notifications<span class="badge  badge-danger
+                        <h6><i class="fas fa-bell"></i>Notifications<span class="badge badge-danger
                          float-right m-1">2</span></h6>
                         <h6><i class="fas fa-shopping-basket"></i>Panier<span class="badge badge-danger float-right
                          m-1">2</span></h6>
                         <h6><i class="fas fa-user-circle"></i> Profils</h6>
                     </div>
-                    <div class="mx-auto" style="width: 50px;">
+                    <div class="mx-auto" style="width: 55px;">
                         <div class="text-center4">
                             <img src="stephanie_tartare.jpg " alt="img" class="image rounded-circle">
-                            <div class="text-center5"><h6>Mon compte</h6></div>
+                            <div class="text2">
+                                <h6>Mon compte</h6></div>
+
                         </div>
                     </div>
                 </div>
             </div>
+
         </div>
         <div class="col-sm-10 background-2">
-            <div class="row ">
+            <div class="row">
                 <div class="col-sm-12 bg-light">
 
-                    <form class="form-inline my-2 my-lg-0">
-                        <input class="form-control mr-sm-2" type="search" placeholder="Search..." aria-label=
-                                "Search">
-                        <button class="btn btn-outline-dark my-2 my-sm-0" type="submit">Recherche</button>
-                    </form>
+                    <p class="font-italic text-monospace"><span class="glyphicon glyphicon-search"></span>Objets,
+                            Propriétaires, Histoires....</p>
+
+
                 </div>
             </div>
 
-            <div class="row text-center justify-content-center two-blocks">
-                <div class="col-sm-2 ">
-                    <div class="border border-info">
-                        <div class="h-100 d-inline-block-1"></div>
-                        <i class="fas fa-suitcase"></i>
-                        <h6>+ AJOUT OBJET</h6>
+            <div class="row text-center justify-content-center two-blocks1">
+                <div class="col-sm-3 ">
+                    <div class="border border-width padding-2">
+                        <div class="color-brown">
+                            <span style="font-size : 2em; color: #A07C71;">
+                            <i class="fas fa-suitcase"></i></span>
+                            <h6 class="text-monospace">+ AJOUT OBJET</h6>
+                        </div>
                     </div>
                 </div>
-                <div class="col-sm-2">
-                    <div class="border border-info">
-                        <div class="h-100 d-inline-block"></div>
-                        <i class="fas fa-user"></i>
-                        <h6> + AJOUT PROPRIETAIRE</h6>
+                <div class="col-sm-3">
+                    <div class="border border-width padding-2">
+                        <div class="color-brown">
+                        <span style="font-size : 2em; color: #A07C71;">
+                        <i class="fas fa-user"></i></span>
+                            <h6 class="text-monospace">+ AJOUT PROPRIETAIRE</h6>
+                        </div>
                     </div>
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-5">
-                    <h6>DERNIERES CONSULTATIONS</h6>
-                </div>
-            </div>
-            <div class="dropdown-divider"></div>
-            <div class="row">
-                <div class="col-sm-3 style=">
-                    <i class="fas fa-suitcase"></i><h6>Malle 1999.0589744.741</h6>
-                    <h6>Malle basse en toile Monogram</h6>
 
-                </div>
+                <div class="col-sm-1"></div>
+                <div class="font-weight-light">
+                    <h6 class="font-weight-normal-weight-bold">DERNIERES CONSULTATIONS</h6></div>
             </div>
-            <div class="dropdown-divider"></div>
-            <div class="row">
-                <div class="col-sm-3">
-                    <h6><i class="fas fa-book"></i> Malle lorem ipsum</h6>
-                    <h6>Malle basse en toile Monogram</h6>
 
-                </div>
-            </div>
-            <div class="dropdown-divider"></div>
-            <div class="row">
-                <div class="col-sm-3">
-                    <h6><i class="fas fa-user"></i>Nom du propriétaire lorem ipsum</h6>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-sm-6">
-                    <h6>DERNIERS TICKETS</h6>
-                    <div class="dropdown-divider"></div>
+            <hr class="color">
+            <div class="row align-items-center">
+                <div class="col-sm-1"></div>
+                <span style="font-size : 1.5em; color: #A07C71;">
+                    <i class="fas fa-suitcase"></i></span>
+                <div class="text">
+                    <h6 class="color-1">Malle 1977.987.78664</h6>
+                    <h6 class="color-2">Malle basse en toile Monogram</h6>
                 </div>
             </div>
 
-            <div class="row">
-                <div class="col-sm-3">
-                    <h6>TICKET N°786785231</h6>
+            <hr class="color">
+            <div class="row align-items-center">
+                <div class="col-sm-1"></div>
+                <span style="font-size : 1.5em; color: #A07C71;">
+                           <i class="fas fa-book lg" ></i></span>
+                <div class="text">
+                    <h6 class="color-1">Malle lorem ipsum</h6>
+                    <h6 class="color-2">Malle basse en toile Monogram</h6>
                 </div>
             </div>
 
-            <div class="row justify-content-center two-blocks">
-                <div class="col-sm-2 border border-brown">
-                    <h6>TRADUCTION HISTOIRE DE</h6>
+            <hr class="color">
+            <div class="row">
+                <div class="col-sm-1"></div>
+                <span style="font-size : 1.5em; color: #A07C71;">
+                     <i class="fas fa-user" aria-hidden="true"></i></span>
+                <div class="text">
+                    <h6 class="color-1">Nom du propriétaire lorem ipsum</h6>
                 </div>
-                <div class="col-sm-3 border border-brown">
-                    <h6>Malle 1977.987.78664</h6>
-                    <h6>Malle basse en toile monogram</h6>
+
+            </div>
+            <div class="row">
+                <div class="col-sm-1"></div>
+                <h6 class="font-weight-bold-weight-normal">DERNIERS TICKETS</h6>
+
+
+            </div>
+            <hr class="color">
+            <div class="row">
+                <div class="col-sm-1"></div>
+                <h6 class="font-weight-bold-weight text-monospace">TICKET N°786785231</h6>
+            </div>
+
+            <div class="row  justify-content-center-fluid two-blocks">
+                <div class="col-md-3 border rounded-left background4">
+                    <h6 class="font-weight-bold-weight text-monospace">TRADUCTION HISTOIRE DE</h6>
                 </div>
-                <div class="col-sm-2 border border-brown">
-                    <h6>STATUT</h6>
+
+                <div class="col-md-3 border border-right-0 background4">
+                  <div class="row align-items-center">
+                     <span style="font-size : 1.5em; color: #A07C71; margin-left: 5px">
+                     <i class="fas fa-suitcase" ></i></span>
+                    <div class="text">
+                        <h6 class="color-1 text-monospace">Malle 1977.987.78664</h6>
+                        <h6 class="color-2 text-monospace">Malle basse en toile monogram</h6>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-md-2 border background4">
+                    <h6 class="font-weight-bold-weight text-monospace">STATUT</h6>
                     <h6>
                         <small class="text-muted"><p class="text-success">Traduction finalisée</p></small>
                     </h6>
 
                     <h6></h6>
                 </div>
-                <div class="col-sm-2 border border-brown">
-                    <h6>ACTION</h6>
+                <div class="col-md-2 border background4">
+                    <h6 class="font-weight-bold-weight text-monospace">ACTION</h6>
                     <h6>
                         <small class="text-muted; display-6 text-danger p-md-6">Valider le contenu</small>
                     </h6>
 
                 </div>
-                <div class="col-sm-2 border border-brown">
-                    <h6>ECHEANCE</h6>
+                <div class="col-md-2 border background4">
+                    <h6 class="font-weight-bold-weight text-monospace">ECHEANCE</h6>
                     <h6>
 
                         <small class="text-muted"><p class="text-success">22 Avril 2017</p></small>
@@ -170,34 +199,40 @@
             </div>
 
             <div class="row">
-                <div class="col-sm-3">
-                    <h6>TICKET N°786785231</h6>
-                </div>
+                <div class="col-md-1"></div>
+                <h6 class="font-weight-bold-weight text-monospace">TICKET N°786785231</h6>
+
             </div>
 
-            <div class="row justify-content-center two-blocks">
-                <div class="col-sm-2 border   border-brown">
-                    <h6>TRADUCTION HISTOIRE DE</h6>
+            <div class="row justify-content-center-fluid two-blocks">
+                <div class="col-md-3 border background4">
+                    <h6 class="font-weight-bold-weight text-monospace">TRADUCTION HISTOIRE DE</h6>
                 </div>
-                <div class="col-sm-3 border border-brown">
-                    <h6>Malle 1977.977.845223</h6>
-                    <h6>Malle basse en toile monogram</h6>
+                <div class="col-md-3 border background4">
+                  <div class="row align-items-center">
+                     <span style="font-size : 1.5em; color: #A07C71;">
+                     <i class="fas fa-suitcase" aria-hidden="true"></i></span>
+                    <div class="text">
+                      <h6 class="color-1 text-monospace">Malle 1977.977.845223</h6>
+                      <h6 class="color-2 text-monospace">Malle basse en toile monogram</h6>
+                    </div>
+                  </div>
                 </div>
-                <div class="col-sm-2 border border-brown">
-                    <h6>STATUT</h6>
+                <div class="col-md-2 border background4">
+                    <h6 class="font-weight-bold-weight text-monospace">STATUT</h6>
                     <h6>
                         <small class="text-muted"><p class="text-success">Traduction finalisée</p></small>
                     </h6>
 
                 </div>
-                <div class="col-sm-2 border border-brown">
-                    <h6>ACTION</h6>
+                <div class="col-md-2 border background4">
+                    <h6 class="font-weight-bold-weight text-monospace">ACTION</h6>
                     <h6>
                         <small class="text-muted; display-6 text-danger p-md-6">Valider le contenu</small>
                     </h6>
                 </div>
-                <div class="col-sm-2 border border-brown">
-                    <h6>ECHEANCE</h6>
+                <div class="col-md-2 border background4">
+                    <h6 class="font-weight-bold-weight text-monospace">ECHEANCE</h6>
                     <h6>
                         <small class="text-muted"><p class="text-success">22 Avril 2017</p></small>
                     </h6>
@@ -205,7 +240,6 @@
             </div>
         </div>
     </div>
-</div>
 </div>
 </body>
 </html>
