--- a/Maquette 3/index.html
+++ b/Maquette 3/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <title>titre</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
@@ -17,24 +17,43 @@
             ="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity
             ="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href=
-            "https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <title> Hello </title>
 
 </head>
 
 <body>
 
-<div class="container-center">
-    <div class= "col-sm-12 bg-light pull-right">
-
-        <img src="../1200px-Multiplication_Sign.svg.png" height="1200" width="1200"/>
-
+<div class=" container ">
+    <div class="col-sm-12">
+        <div class="row justify-content-end">
+            <div class="col-sm-0.5 ">
+                <img src="../1200px-Multiplication_Sign.svg.png" height="20" width="20"/>
+            </div>
+        </div>
     </div>
 
+    <div class="row justify-content-center">
+        <div class="text1 text-center text-monospace">
+            <h5 class="font-weight-light">DEMANDE <br>DE CREATION DE COMPTE</h5>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-12 text-center">
+            <img src="../assets/src_assets_img_icon-separator.svg" alt="">
+        </div>
+    </div>
+
+
+
+<div class="row">
+
+
+</div>
 
 </div>
 
 
 </body>
+
 </html>
